Add mandatebatch integration test, improve coverage